       * "ips", "levinlin": p-values fixed (now one-sided to the left).
      * new tests: Choi (2001) modified P ("Pm"), inverse normal ("invnormal"),
                   logit ("logit").
      * cosmetic: when argument 'lags' is not specified by user, the returned
        object does not contain all three possible values in args$lags anymore.
  * pldv: new function to compute fixed and random effects models for truncated 
          or censored dependent variable.
  * pgrangertest: added Granger causality test for panels (Dumitrescu/Hurlin (2012)).
  * pbsytest:
      * test = "j": [joint test by Baltagi/Li(1991)]:
        fixed degrees of freedom (now df = 2 instead of df = 1).
      * unbalanced version of all statistics implemented (Sosa-Escudero/Bera (2008)).
      * new argument 're.normal' (only relevant for test = "re"): allows to compute
        the two-sided RE test when set to FALSE (default is TRUE which gives the
        one-sided RE test as before).
  * plm.data:
      * use discouraged now (gives warning), use pdata.frame instead.
      * function internally uses pdata.frame now and then adjusts
        to get a "plm.dim" object as before. This way, plm.data
        benefits from bug fixes made previously to pdata.frame.
  * pdata.frame:
      * by default, the resulting pdata.frame is now closer to the original data:
         * columns with constant values and all-NA values are not removed anymore,
         * non-finite values are not substituted with NAs anymore,
         * unused factor levels are not dropped anymore (except for those
           variables serving to construct the index).
      * arguments 'drop.NA.series', 'drop.const.series', 'replace.non.finite',
        'drop.unused.levels' introduced to remove/replace columns/values as described
        before (all default to FALSE).
      * warning issued if an index variable is to be constructed that subsequently 